Graph refinement and various updates.