@@ -12,6 +12,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.StringReader;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.regex.Matcher;
@@ -192,15 +193,18 @@ public class Strings {
 	}
 
 	/**
-	 * Returns the given input string conditionally truncated and with an added ellipsis mark if the
-	 * string exceeds the given {@code len}. If {@code len} is positive, truncation occurs at the
-	 * string tail, otherwise at the head.
+	 * Returns the given input string conditionally truncated and with an added ellipsis
+	 * mark if the string exceeds the given {@code len}. If {@code len} is positive,
+	 * truncation occurs at the string tail, otherwise at the head.
 	 */
 	public static String ellipsize(String input, int len) {
-		if (len == 0) return EMPTY;
-		if (input == null || input.length() < Math.abs(len)) return input;
-		if (len > 0) return input.substring(0, len) + ELLIPSIS_MARK;
-		return ELLIPSIS_MARK + input.substring(input.length() + len);
+		final int mlen = ELLIPSIS_MARK.length();
+		final int alen = Math.abs(len);
+
+		if (input == null || alen <= mlen) return EMPTY;
+		if (input.length() < alen) return input;
+		if (len > 0) return input.substring(0, alen - mlen) + ELLIPSIS_MARK;
+		return ELLIPSIS_MARK + input.substring(input.length() - alen + mlen);
 	}
 
 	/** Capitalize the first letter of the given phrase & lowercase remainder. */
@@ -215,8 +219,8 @@ public class Strings {
 	 * Returns <code>true</code> if the given character is a line delimiter character.
 	 *
 	 * @param ch the given character
-	 * @return Returns <code>true</code> if this the character is a line delimiter character,
-	 *         <code>false</code> otherwise
+	 * @return Returns <code>true</code> if this the character is a line delimiter
+	 *         character, <code>false</code> otherwise
 	 */
 	public static boolean isLineDelimiterChar(char ch) {
 		return ch == Chars.NL || ch == Chars.RET;
@@ -301,7 +305,8 @@ public class Strings {
 		int prefixLength = prefix.length();
 		if (textLength < prefixLength) return false;
 		for (int i = prefixLength - 1; i >= 0; i--) {
-			if (Character.toLowerCase(prefix.charAt(i)) != Character.toLowerCase(text.charAt(i))) return false;
+			if (Character.toLowerCase(prefix.charAt(i)) != Character.toLowerCase(text.charAt(i)))
+				return false;
 		}
 		return true;
 	}
@@ -311,10 +316,19 @@ public class Strings {
 	}
 
 	/**
-	 * Return {@code true} if the given text is {@code null}, empty, or only contains whitespace.
+	 * Return {@code true} if the given text is {@code null}, empty, or only contains
+	 * whitespace.
 	 */
 	public static boolean blank(String text) {
-		return text == null || text.trim().isEmpty();
+		return text == null || text.isBlank();
+	}
+
+	/**
+	 * Return {@code true} if any of the given texts is {@code null}, empty, or only
+	 * contains whitespace.
+	 */
+	public static boolean blank(String... texts) {
+		return Arrays.stream(texts).anyMatch(t -> blank(t));
 	}
 
 	/** Returns result of !null and !isEmpty test. */
@@ -332,8 +346,8 @@ public class Strings {
 	}
 
 	/**
-	 * Remove one level of quotes surrounding the literal. No error if quotes are not present or are
-	 * mixed.
+	 * Remove one level of quotes surrounding the literal. No error if quotes are not
+	 * present or are mixed.
 	 */
 	public static String deQuote(String literal) {
 		int endIdx = literal.length() - 1;
@@ -395,8 +409,8 @@ public class Strings {
 	}
 
 	/**
-	 * Trims the leading and trailing brace, if present, along with adjacent whitespace. A trailing
-	 * brace is trimmed only if a leading brace is found.
+	 * Trims the leading and trailing brace, if present, along with adjacent whitespace. A
+	 * trailing brace is trimmed only if a leading brace is found.
 	 */
 	public static String trimBraces(String block) {
 		if (block == null) return EMPTY;
@@ -659,39 +673,47 @@ public class Strings {
 		return sb;
 	}
 
-	// /**
-	// * Returns the given number of spaces.
-	// * <p>
-	// * Use #dup
-	// */
-	// @Deprecated
-	// public static String getNSpaces(int spaces) {
-	// return dup(spaces, Chars.SP);
-	// }
-	//
-	// /**
-	// * Returns {@code count} copies of the given character.
-	// * <p>
-	// * Use #dup
-	// */
-	// @Deprecated
-	// public static String getNChars(int count, char ch) {
-	// StringBuffer buf = new StringBuffer(count);
-	// for (int i = 0; i < count; i++)
-	// buf.append(ch);
-	// return buf.toString();
-	//
-	// }
+	// -----
+
+	/**
+	 * Pad the given text with spaces to the given width.
+	 *
+	 * @param txt   the text to pad
+	 * @param width the total width
+	 * @return the right padded text
+	 */
+	public static String padr(String txt, int width) {
+		return padr(txt, width, Strings.SPACE);
+	}
+
+	/**
+	 * Pad the given text with the given pad sequence to the given width.
+	 *
+	 * @param txt   the text to pad
+	 * @param width the total width
+	 * @param pad   the padding sequence
+	 * @return the right padded text
+	 */
+	public static String padr(String txt, int width, String pad) {
+		pad = pad != null ? pad : Strings.SPACE;
+		int delta = width - txt.length();
+		if (delta <= 0) return txt;
+
+		int len = pad.length();
+		int cnt = delta / len;
+		int mod = delta % len;
+		return txt + pad.repeat(cnt) + pad.substring(0, mod);
+	}
 
 	// -----
 
 	/**
-	 * Returns a separator delimited string representation of the given list values. The returned
-	 * string will not include a trailing separator.
+	 * Returns a separator delimited string representation of the given list values. The
+	 * returned string will not include a trailing separator.
 	 *
 	 * @param values   ordered list of string values
-	 * @param asPrefix if {@code true}, the separator is positioned as a prefix to each list value,
-	 *                 otherwise as a suffix
+	 * @param asPrefix if {@code true}, the separator is positioned as a prefix to each
+	 *                 list value, otherwise as a suffix
 	 * @param sep      the string literal to be used as a list string separator
 	 * @return separator delimited string
 	 */
@@ -751,14 +773,16 @@ public class Strings {
 	// }
 
 	/**
-	 * Returns the string representation of the given objects joined using the CSV delimiter.
+	 * Returns the string representation of the given objects joined using the CSV
+	 * delimiter.
 	 */
 	public static String join(Collection<?> objs) {
 		return join(CsvDELIM, objs);
 	}
 
 	/**
-	 * Returns the string representation of the given objects joined using the given delimiter.
+	 * Returns the string representation of the given objects joined using the given
+	 * delimiter.
 	 */
 	public static String join(CharSequence delimiter, Collection<?> objs) {
 		List<String> list = new ArrayList<>();
@@ -800,8 +824,8 @@ public class Strings {
 	}
 
 	/**
-	 * Concatenate the given strings into one string using the passed line delimiter as a delimiter.
-	 * No delimiter is added to the last line.
+	 * Concatenate the given strings into one string using the passed line delimiter as a
+	 * delimiter. No delimiter is added to the last line.
 	 *
 	 * @param lines     the lines
 	 * @param delimiter line delimiter
@@ -813,9 +837,10 @@ public class Strings {
 	}
 
 	/**
-	 * Returns a new array adding the second array at the end of first array. It answers null if the
-	 * first and second are null. If the first array is null or if it is empty, then a new array is
-	 * created with second. If the second array is null, then the first array is returned. <br>
+	 * Returns a new array adding the second array at the end of first array. It answers
+	 * null if the first and second are null. If the first array is null or if it is
+	 * empty, then a new array is created with second. If the second array is null, then
+	 * the first array is returned. <br>
 	 * <br>
 	 * For example:
 	 * <ol>
@@ -849,8 +874,8 @@ public class Strings {
 	 *
 	 * @param first  the first array to concatenate
 	 * @param second the array to add at the end of the first array
-	 * @return a new array adding the second array at the end of first array, or null if the two
-	 *         arrays are null.
+	 * @return a new array adding the second array at the end of first array, or null if
+	 *         the two arrays are null.
 	 */
 	public static String[] arrayConcat(String[] first, String second) {
 		if (second == null) return first;
@@ -901,13 +926,13 @@ public class Strings {
 	}
 
 	/**
-	 * Returns {@code true} if the given string only consists of white spaces according to Java. If
-	 * the string is empty, <code>true
+	 * Returns {@code true} if the given string only consists of white spaces according to
+	 * Java. If the string is empty, <code>true
 	 * </code> is returned.
 	 *
 	 * @param s the string to test
-	 * @return {@code true} if the string only consists of white spaces; otherwise {@code false} is
-	 *         returned
+	 * @return {@code true} if the string only consists of white spaces; otherwise
+	 *         {@code false} is returned
 	 * @see java.lang.Character#isWhitespace(char)
 	 */
 	public static boolean containsOnlyWhitespaces(String s) {
